# safecode-llvm37

./: README.md
projects/poolalloc/: Makefile
projects/poolalloc/lib/: Makefile
projects/safecode/: CREDITS.TXT  LICENSE.TXT  Makefile  Makefile.common.in  Makefile.config  README  configure
projects/safecode/autoconf/: configure.ac
projects/safecode/docs/: Install.html  SoftBoundCETS.html  UsersGuide.html
projects/safecode/docs/SoftArch/: Makefile  checks.tex  intro.tex  layout.tex  softarch.tex  struct.tex
projects/safecode/include/: AffineExpressions.h  BottomUpCallGraph.h  CommonMemorySafetyPasses.h  ConstraintGeneration.h  ConvertUnsafeAllocas.h  SCUtils.h  SafeDynMemAlloc.h  StackSafety.h  UninitPointer.h  omega.h
projects/safecode/include/SoftBound/: InitializeSoftBound.h  SoftBoundCETSPass.h
projects/safecode/include/safecode/: AllocatorInfo.h  ArrayBoundsCheck.h  BaggyBoundsChecks.h  BreakConstantGEPs.h  BreakConstantStrings.h  CFIChecks.h  CStdLib.h  CheckInfo.h  CodeDuplication.h  CompleteChecks.h  DebugInstrumentation.h  DetectDanglingPointers.h  FaultInjector.h  FormatStrings.h  GEPChecks.h  IndirectCallChecks.h  InitAllocas.h  InsertChecks.h  InvalidFreeChecks.h  LoggingFunctions.h  LowerSafecodeIntrinsic.h  MonotonicOpt.h  OptimizeChecks.h  RegisterBounds.h  RegisterRuntimeInitializer.h  RewriteOOB.h  SAFECode.h  SAFECodeConfig.h  SAFECodeMSCInfo.h  SAFECodePasses.h  SafeLoadStoreOpts.h  SpecializeCMSCalls.h  SpeculativeChecking.h  Utility.h  VectorListHelper.h
projects/safecode/include/utils/: LICENSE.TXT  fdstream.h
projects/safecode/lib/: Makefile
projects/safecode/lib/ArrayBoundChecks/: AffineExpressions.cpp  ArrayBoundCheckDummy.cpp  ArrayBoundCheckLocal.cpp  ArrayBoundCheckStruct.cpp  BottomUpCallGraph.cpp  BreakConstantGEPs.cpp  ConstraintGeneration.cpp  Makefile
projects/safecode/lib/BaggyBoundsChecks/: BaggyBoundsChecks.cpp  Makefile
projects/safecode/lib/CStdLib/: LoggingFunctions.cpp  Makefile  RegisterVarargCallSites.cpp  String.cpp
projects/safecode/lib/CommonMemorySafety/: CommonMSCInfo.cpp  ExactCheckOpt.cpp  InstrumentMemoryAccesses.cpp  MSCInfo.cpp  Makefile  NoMSCInfo.cpp  OptimizeIdenticalLSChecks.cpp  OptimizeImpliedFastLSChecks.cpp  SAFECodeMSCInfo.cpp  SpecializeCMSCalls.cpp
projects/safecode/lib/ConvertUnsafeAllocas/: InitAllocas.cpp  Makefile  convert.cpp
projects/safecode/lib/DanglingPointers/: DetectDanglingPointers.cpp  Makefile
projects/safecode/lib/DebugInstrumentation/: DebugInstrumentation.cpp  Makefile
projects/safecode/lib/FaultInjector/: FaultInjector.cpp  Makefile
projects/safecode/lib/FormatStrings/: FormatStrings.cpp  Makefile
projects/safecode/lib/IndirectCallChecks/: IndirectCallChecks.cpp  Makefile
projects/safecode/lib/InsertPoolChecks/: AlignmentChecks.cpp  CFIChecks.cpp  ClearCheckAttributes.cpp  CompleteChecks.cpp  GEPChecks.cpp  InvalidFreeChecks.cpp  Makefile  RegisterBounds.cpp  RegisterRuntimeInitializer.cpp  RegisterStackObjPass.cpp  Terminate.cpp
projects/safecode/lib/OptimizeChecks/: GlobalRegisterOpt.cpp  InlineFastChecks.cpp  Makefile  MonotonicLoopOpt.cpp  OptimizeChecks.cpp  PoolRegisterElimination.cpp  RemoveSlowChecks.cpp  SafeLoadStoreOpts.cpp  UnusedCheckElimination.cpp
projects/safecode/lib/PointerChecks/: CZero.cpp  CZeroInfo.h  FreeRemoval.cpp  Makefile
projects/safecode/lib/ProofWrap/: Makefile  ProofWrap.cpp
projects/safecode/lib/RewriteOOB/: Makefile  RewriteOOB.cpp
projects/safecode/lib/Safecode/: Makefile
projects/safecode/lib/SoftBound/: InitializeSoftBound.cpp  Makefile  SoftBoundCETS.cpp
projects/safecode/lib/SpeculativeChecking/: Caching.cpp  CodeDuplication.cpp  Makefile  SpeculativeChecking.cpp
projects/safecode/lib/StackSafety/: CheckStackPointer.cpp  Makefile
projects/safecode/lib/Support/: AllocatorInfo.cpp  Makefile  SAFECodeConfig.cpp
projects/safecode/lib/Utility/: BreakConstantStrings.cpp  LowerSafecodeIntrinsic.cpp  Makefile
projects/safecode/old_runtime/: Makefile
projects/safecode/old_runtime/BBRuntime/: BaggyBoundsCheck.cpp  CStdLib.cpp  DebugReport.cpp  DebugReport.h  ExactCheck.cpp  Makefile  Report.cpp  RuntimeChecks.cpp
projects/safecode/old_runtime/BitmapPoolAllocator/: Makefile  PageManager.cpp  PoolAllocatorBitMask.cpp  PoolSlab.cpp  PoolSlab.h
projects/safecode/old_runtime/BoundsCheckAllocator/: Makefile  PoolAllocator.cpp  PoolAllocator.h  splay.cpp  splay.h
projects/safecode/old_runtime/DPPoolAllocator/: Makefile  PageManager.cpp  PageManager.h  PoolAllocator.h  PoolAllocatorBitMask.cpp
projects/safecode/old_runtime/DebugRuntime/: CStdLib.h  DebugReport.cpp  DebugReport.h  ExactCheck.cpp  FormatStrings.cpp  FormatStrings.h  LICENSE.txt  Makefile  MallocHooks.cpp  PageManager.cpp  PageManager.h  PoolAllocator.h  PoolAllocatorBitMask.cpp  PrintfSupport.cpp  README.txt  Report.cpp  RewritePtr.cpp  RewritePtr.h  RuntimeChecks.cpp  ScanfSupport.cpp  string.cpp  strings.cpp
projects/safecode/old_runtime/FloatConversion/: Makefile  arithchk.c  hdtoa.c  ldtoa.c
projects/safecode/old_runtime/KernelSafePoolAllocator/: Makefile  PageManager.cpp  PageManager.h  PoolAllocator.h  PoolAllocatorBitMask.cpp  PoolCheck.cpp  PoolCheck.h  README  splay.cpp  splay.h
projects/safecode/old_runtime/SVA/: ExactCheck.c  Makefile  PoolCheck.c  PoolCheck.h  PoolSystem.h  Statistics.c  adl_rbtree.c  adl_splay.c  adl_splay.h  rb_kernel.h
projects/safecode/old_runtime/SafePoolAllocator/: AtomicOps.h  BCPoolAllocator.cpp  BareBonePoolAllocator.cpp  BoundsCheck.c  BoundsCheck.h  CStdLib.cpp  ConfigData.h  ExactCheck.c  ExactCheck.h  Makefile  MallocHooks.cpp  PageManager.cpp  (+11 more)
projects/safecode/runtime/: Makefile
projects/safecode/test/: Makefile  TEST.abc.Makefile  TEST.abc.report  TEST.bb.Makefile  TEST.bb.report  TEST.debug.Makefile  TEST.debug.report  TEST.full.Makefile  TEST.full.report  TEST.par.Makefile  TEST.par.report  TEST.safecode.Makefile  TEST.safecode.report  TEST.valgrind.Makefile  TEST.valgrind.report
projects/safecode/tools/: Makefile
projects/safecode/utils/: NightlyCronTab  NightlyTest.sh  omega.pl
(+1640 files in other folders)
